# lineaxpr

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.benchmarks/Darwin-CPython-3.13-64bit/: 0002_refs-jax0.10.0.json  0004_refs-jax0.10.0.json  0006_full-jaxhes-jax0.10.0.json  0007_full-jaxhes-folded-jax0.10.0.json  0008_full-asdex-jax0.10.0.json  0010_full-asdex-jax0.10.0.json  0019_full-jaxhes-jax0.10.0.json  0020_full-jaxhes-folded-jax0.10.0.json  0021_full-asdex-jax0.10.0.json
.benchmarks/Linux-CPython-3.12-64bit/: 0021_full-jaxhes-jax0.10.0_linux.json  0022_full-asdex-dense-jax0.10.0_linux.json  0023_full-asdex-bcoo-jax0.10.0_linux.json  0024_8563bf9_full_linux.json  0025_compile_times_8563bf9.json
.github/workflows/: ci.yml
benchmarks/: bench_asdex.py  diag_benchmark.py  diag_vjp_jaxpr.py  diff_full.py  merge_chunks.py  plots.py  probe_caps.py  report.py  rss_probe.py  run_bench.sh  run_full_chunked.sh  run_in_container.sh  run_linux_sweep.sh  run_with_asdex.sh  test_compile_time.py  test_contamination_probe.py  test_curated.py  test_full.py  test_harness_isolation.py  test_highn.py
benchmarks/docker/: Dockerfile  build.sh
benchmarks/plots/: .gitkeep
docs/: ARCHITECTURE.md  BENCH_HARNESS_NOTES.md  BE_CONVERSION_AUDIT.md  RESEARCH_NOTES.md  TODO.md
experiments/: run_monkeypatch.py  sparsify_monkeypatch.py  walk_trace.py
experiments/jaxls/: bridge.py  cart_pole.py  mwe.py  obstacle_avoidance.py  signal_denoising.py
experiments/mjx/: collocation.py  models.py  stage1.py  stage2.py
lineaxpr/: __init__.py  _base.py  _transform.py  materialize.py
lineaxpr/_linops/: __init__.py  base.py  bcoo_extend.py  dense.py  diagonal.py  ellpack.py  ellpack_indexing.py  ellpack_transforms.py
lineaxpr/_rules/: __init__.py  add.py  control_flow.py  indexing.py  mul.py  multilinear.py  registry.py  structural.py  unary.py
paper/: neurips_2026.aux  neurips_2026.bbl  neurips_2026.blg  neurips_2026.out  neurips_2026.tex  references.bib
tests/: _synthetic_problems.py  conftest.py  coverage_sweep.py  nse_manifest.json  test_conversions.py  test_correctness.py  test_materialize.py  test_ops.py  test_primitive_vmap_grid.py  test_public_api.py  test_sif2jax_sweep.py  test_sparsify.py  update_nse_manifest.py
