[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lineaxpr"
version = "0.0.1"
description = "Coloring-free Jacobian/Hessian extraction via linear-jaxpr interpretation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Jonathan Brodrick" }]
dependencies = [
    "jax>=0.4.30",
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-benchmark",
    "pytest-timeout",
    # sif2jax provides the CUTEst problem suite the slow sweep iterates
    # over; without it, `tests/test_sif2jax_sweep.py` skips entirely
    # and the ECF/no-ECF CI matrix becomes a no-op.
    "sif2jax @ git+https://github.com/johannahaffner/sif2jax.git@main",
]
benchmark = [
    "pytest",
    "pytest-benchmark",
    "pytest-timeout",
    "asdex>=0.2.0",
    "sif2jax @ git+https://github.com/johannahaffner/sif2jax.git@main",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lineaxpr*"]

[tool.pytest.ini_options]
testpaths = ["tests", "benchmarks"]
markers = [
    "slow: sweep tests over large problem sets; opt in with `pytest -m slow`",
]
# Don't run slow tests by default — opt in with `-m slow`.
addopts = "-m 'not slow'"

# ---------------------------------------------------------------------------
# ruff — lint (matches jaxtra config for PR readiness)
# ---------------------------------------------------------------------------
[tool.ruff]
preview = true
exclude = [".git", "build", "__pycache__"]
line-length = 80
indent-width = 2
target-version = "py311"

[tool.ruff.lint]
select = [
  "ASYNC",
  "B9",
  "C",
  "E101",
  "E112",
  "E113",
  "E115",
  "E117",
  "E225",
  "E227",
  "E228",
  "F",
  "W",
  "YTT",
]
ignore = [
  "B901", # yield and return value in generator function
  "B903", # class could be dataclass or namedtuple
  "B904", # raise with from clause inside except block
  "B905", # zip without explicit strict parameter
  "C408", # unnecessary collection call
  "C417", # unnecessary map usage
  "C420", # unnecessary dict comprehension for iterable
  "C901", # object names too complex
]

[tool.ruff.lint.mccabe]
max-complexity = 18

# ---------------------------------------------------------------------------
# mypy — type checking (matches jaxtra config)
# ---------------------------------------------------------------------------
[tool.mypy]
show_error_codes = true
disable_error_code = "attr-defined, name-defined, annotation-unchecked"
no_implicit_optional = true
warn_redundant_casts = true
allow_redefinition = true

[[tool.mypy.overrides]]
module = [
  "jax.*",
  "jaxlib.*",
  "matplotlib.*",
  "numpy.*",
  "scipy.*",
  "sif2jax.*",
  "asdex.*",
]
ignore_missing_imports = true
